--- a/views/add_std.html
+++ b/views/add_std.html
@@ -192,6 +192,7 @@
                   <button class="btn btn-success" onclick="add_std()">Add Student</button>
                   <button class="btn btn-success" onclick="add_class()">Add Class</button>
                   <button class="btn btn-warning" onclick="fees_mng()">Fees Management</button>
+                  <button class="btn btn-warning" onclick="fees_his()">Fees History</button>
                 </div>
               </div>
 
