--- a/views/add_std_form.html
+++ b/views/add_std_form.html
@@ -98,13 +98,13 @@ body{
 					<div class="form-group">
 						<label class="col-sm-3 control-label" for="dob">Exact Date of Birth: </label>
 						<div class="col-sm-9">
-							<input id="dob" name="dob" type="date" class="form-control">
+							<input id="dob" name="dob" type="date" class="form-control"  onchange="getAge()">
 						</div>
 					</div>
 					<div class="form-group">
 						<label class="col-sm-3 control-label" for="age">Age</label>
 						<div class="col-sm-9">
-							<input id="age" name="age" type="text" class="form-control">
+							<input id="age" name="age" type="text" class="form-control" readonly>
 						</div>
 					</div>
 					<div class="form-group">
