--- a/views/fees_page.html
+++ b/views/fees_page.html
@@ -201,7 +201,7 @@
               <div class="col-md-12">
 
                 <div class="row">
-                <div class="form-group col-md-3">
+                <div class="form-group col-md-2">
                     <label class="control-label">For the Month: </label>
                     <input class="form-control input-sm month" id="month" name="month" type="month" >
                 </div>
@@ -213,10 +213,13 @@
                     <label class="control-label">Due Date: </label>
                     <input class="form-control input-sm month due" id="due" name="due" type="Date" >
                 </div> 
-                  <div class="form-group col-md-3 ">
+                  <div class="form-group col-md-2 ">
                     <button class="btn btn-sm btn-success btn-block" onclick="changeMonth(); return false;" style="    margin-top: 20px;" >Change Month</button>
-                  </div>                        
-                </div>   
+                  </div>   
+                  <div class="form-group col-md-2 ">
+                    <button class="btn btn-sm btn-warning btn-block" onclick="fees_his()" style="margin-top: 20px;">Fees History</button>
+                  </div>                                        
+                </div>
 
               </div>
               <form id = "fees_form">
