--- a/views/fees_page.html
+++ b/views/fees_page.html
@@ -178,7 +178,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">UN ACADEMY<br/>
+        <a class="navbar-brand" href="#">U N ACADEMY<br/>
           <small>School Management System</small>
         </a>
       </div>
@@ -216,9 +216,13 @@
                   <div class="form-group col-md-2 ">
                     <button class="btn btn-sm btn-success btn-block" onclick="changeMonth(); return false;" style="    margin-top: 20px;" >Change Month</button>
                   </div>   
-                  <div class="form-group col-md-2 ">
-                    <button class="btn btn-sm btn-warning btn-block" onclick="fees_his()" style="margin-top: 20px;">Fees History</button>
-                  </div>                                        
+                  <div class="form-group col-md-1 ">
+                    <button class="btn btn-sm btn-warning btn-block" onclick="fees_his()" style="margin-top: 20px;">History</button>
+                  </div>                
+
+                  <div class="form-group col-md-1 ">
+                    <button class="btn btn-sm btn-warning btn-block" onclick="fees_print()" style="margin-top: 20px;">Print</button>
+                  </div>   
                 </div>
 
               </div>
