--- a/views/add_std.html
+++ b/views/add_std.html
@@ -13,7 +13,9 @@
   <script type="text/javascript" charset="utf-8" src="javascripts/notify.min.js"></script> 
   <script type="text/javascript" charset="utf-8" src="javascripts/jquery.dataTables.min.js"></script>
   <script type="text/javascript" charset="utf-8" src="javascripts/core.js"></script>
-
+  <script src="https://cdn.jsdelivr.net/npm/print-js@1.0.54/dist/print.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/print-js@1.0.54/dist/print.css">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" media='screen,print'>
 
 
   <style>.bootstrap-iso .formden_header h2, .bootstrap-iso .formden_header p, .bootstrap-iso form{font-family: Arial, Helvetica, sans-serif; color: black}.bootstrap-iso form button, .bootstrap-iso form button:hover{color: white !important;} .asteriskField{color: red;}</style>
@@ -169,7 +171,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">UN ACADEMY<br/>
+        <a class="navbar-brand" href="#">U N ACADEMY<br/>
           <small>School Management System</small>
         </a>
       </div>
@@ -193,6 +195,7 @@
                   <button class="btn btn-success" onclick="add_class()">Add Class</button>
                   <button class="btn btn-warning" onclick="fees_mng()">Fees Management</button>
                   <button class="btn btn-warning" onclick="fees_his()">Fees History</button>
+                  <button class="btn btn-warning" onclick="print_std()">Print</button>
                 </div>
               </div>
 
