--- a/views/fees_history.html
+++ b/views/fees_history.html
@@ -178,7 +178,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">UN ACADEMY<br/>
+        <a class="navbar-brand" href="#">U N ACADEMY<br/>
           <small>School Management System</small>
         </a>
       </div>
@@ -197,6 +197,11 @@
               <div class="col-md-4">
                 <h2 style="margin: 10px 0; text-transform: uppercase;"><strong>Students</strong></h2>
               </div>
+              <div class="col-md-8 ">
+                <div class="pull-right" style="margin: 10px 0;">
+                  <button class="btn btn-warning" onclick="print_history()">Print</button>
+                </div>
+              </div>              
               <br>
               <form id = "fees_form">
                 <div id = "">
