--- a/views/add_std_form.html
+++ b/views/add_std_form.html
@@ -192,7 +192,25 @@ body{
 						<div class="col-sm-9">
 							<textarea id="activities" name="health" rows="4" class="form-control"></textarea>
 						</div>
-					</div>			  		  
+					</div>
+					<div class="form-group">
+						<label class="col-sm-3 control-label" for="monthly_fees"> His/Her brother/sister studying in U N Academy </label>
+						<div class="col-sm-9">
+							<textarea id="sibling" name="sibling" rows="4" class="form-control"></textarea>
+<!-- 	                       <table id="sibling_table" class="table table-striped table-bordered table-list">
+	                        <thead>
+	                          <tr>
+	                            <th> Name </th>
+	                            <th> Class </th>
+	                            <th> Date Of Admission </th>
+	                            <th> Gr Number  </th>
+	                          </tr> 
+	                        </thead>
+	                        <tbody id="sibling_table_body">
+	                        </tbody>
+	                        </table> -->
+	                    </div>
+					</div>						  		  
 					<div class="form-group">
 						<label class="col-sm-3 control-label" for="admission_fees">Admission Fees: </label>
 						<div class="col-sm-9">
