--- a/views/update_std_form.html
+++ b/views/update_std_form.html
@@ -193,6 +193,12 @@ body{
 							<textarea id="health" name="health" rows="4" class="form-control"></textarea>
 						</div>
 					</div>
+					<div class="form-group">
+						<label class="col-sm-3 control-label" for="health"> His/Her brother/sister studying in U N Academy </label>
+						<div class="col-sm-9">
+							<textarea id="sibling" name="sibling" rows="4" class="form-control"></textarea>
+						</div>
+					</div>
 
 					<div class="form-group">
 						<div class="col-sm-offset-3 col-sm-9">
