updated new transport

--- a/views/fees_page.html
+++ b/views/fees_page.html
@@ -270,6 +270,7 @@
                             <th> Miscellaneous </th>
                             <th> Transport Fees </th>
                             <th> Arrears </th>
+                            <th> Transport Arrears </th>
                             <th> Current Penalty  </th>
                             <th> For the Month  </th>
                             <th> Issue Date  </th>
@@ -290,6 +291,7 @@
                             <td> <input name="annual_fees" type="number"></td>
                             <td> <input name="monthly_fees" type="number"></td>
                             <td> <input name="misc_fees" type="number"></td>
+                            <td> </td>
                             <td> </td>
                             <td> </td>
                             <td> </td>
