--- a/views/add_std.html
+++ b/views/add_std.html
@@ -158,6 +158,9 @@
     margin-right: 790px;
     margin-bottom: 100px;
   }
+  #classes{
+    width: auto !important;
+  }
 </style>
 </head>
 <body onload="getClass()">
@@ -206,23 +209,23 @@
                       <div class="panel-heading">
                         <div class="row search-row">
                           <div class="form-group col-md-3 ">
-                            <label class="control-label" for="card-number">Gr No.</label>
+                            <label class="control-label" for="card-number">GR No.</label>
                             <input class="form-control input-sm" id="gr_num" name="gr_num" type="text" placeholder="GR Number" >
                           </div>
 
-                          <div class="form-group col-md-3 ">
-                            <label class="control-label" for="card-number">Name</label>
+                          <div class="form-group col-md-4 ">
+                            <label class="control-label" for="card-number">Student's Name</label>
                             <input class="form-control input-sm" id="name" name="name" type="text" placeholder="Name" >
                           </div>
 
                           <div class="form-group col-md-3 ">
                             <label class="control-label" for="card-number">Class</label>
-                            <select name="classes" id="classes" class="form-control input-sm col-md-12">
+                            <select name="classes" id="classes" class="form-control input-sm">
                               <option value="all"> All </option>
                             </select>
                           </div>
 
-                          <div class="form-group col-md-3 ">
+                          <div class="form-group col-md-2 ">
                             <button class="btn btn-sm btn-success btn-block" onclick="searchStudent(); return false;" >Search</button>
                           </div>
                         </div>
@@ -231,11 +234,11 @@
                         <table id="student_table" class="table table-striped table-bordered table-list">
                           <thead>
                             <tr>
-                              <th> Gr Number  </th>
-                              <th> Name </th>
-                              <th> Father Name </th>
+                              <th> GR Number  </th>
+                              <th> Student's Name </th>
+                              <th> Father's Name </th>
                               <th> Telephone(Home) </th>
-                              <th> Telephone(Office) </th>
+                              <th> D.O.B </th>
                               <th> Update Record  </th>
                               <th> Delete Record </th>
                             </tr> 
