--- a/views/fees_page.html
+++ b/views/fees_page.html
@@ -165,6 +165,14 @@
   .search-btn{
     margin-top: 20px;
   }
+  #fees_table td input{
+    width: 50px; 
+    word-wrap: break-word;
+    font-size: 11px;
+  }
+  .container {
+      width: auto;
+  }  
 </style>
 </head>
 <body onload="getFees()">
@@ -259,27 +267,28 @@
                        <table id="fees_table" class="table table-striped table-bordered table-list">
                         <thead>
                           <tr>
-                            <th> Gr Number  </th>
-                            <th> Name </th>
-                            <th> Father Name </th>
-                            <th> Class </th>
-                            <th> Admission Fees </th>
-                            <th> Security </th>
-                            <th> Annual Charges </th>
-                            <th> Tution Fees </th>
-                            <th> Miscellaneous </th>
-                            <th> Transport Fees </th>
-                            <th> Arrears </th>
-                            <th> Transport Arrears </th>
-                            <th> Current Penalty  </th>
-                            <th> For the Month  </th>
-                            <th> Issue Date  </th>
-                            <th> Due Date  </th>
-                            <th> Receive Date  </th>
-                            <th> Update Record  </th>
-                            <th> Print Admission Challan </th>
-                            <th> Print Monthly Challan </th>
-                            <th> Print Transport Challan </th>
+                            <th>Gr #</th>
+                            <th>Name</th>
+                            <th>Father Name</th>
+                            <th>Class</th>
+                            <th>Admission Fees</th>
+                            <th>Security</th>
+                            <th>Annual Charges</th>
+                            <th>Tution Fees</th>
+                            <th>Misc</th>
+                            <th>Transport Fees</th>
+                            <th>Arrears</th>
+                            <th>Transport Arrears</th>
+                            <th>Current Penalty</th>
+                            <th>Total</th>
+                            <th>For the Month</th>
+                            <th>Issue Date</th>
+                            <th>Due Date</th>
+                            <th>Receive Date</th>
+                            <th>Update Record</th>
+                            <th>Print Admission Challan</th>
+                            <th>Print Monthly Challan</th>
+                            <th>Print Transport Challan</th>
                           </tr> 
                           <tr>
                             <td>  </td>
@@ -291,6 +300,7 @@
                             <td> <input name="annual_fees" type="number"></td>
                             <td> <input name="monthly_fees" type="number"></td>
                             <td> <input name="misc_fees" type="number"></td>
+                            <td> </td>
                             <td> </td>
                             <td> </td>
                             <td> </td>
