--- a/views/fees_history.html
+++ b/views/fees_history.html
@@ -199,6 +199,7 @@
               </div>
               <div class="col-md-8 ">
                 <div class="pull-right" style="margin: 10px 0;">
+                  <button class="btn btn-warning" onclick="fees_mng()">Fees Management</button>
                   <button class="btn btn-warning" onclick="print_history()">Print</button>
                 </div>
               </div>              
