--- a/views/fees_page.html
+++ b/views/fees_page.html
@@ -7,6 +7,7 @@
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"> 
   <link rel="stylesheet" href="stylesheets/jquery.dataTables.min.css" type="text/css" media="screen"/>
   <link rel="stylesheet" href="https://formden.com/static/cdn/bootstrap-iso.css" /> 
+  <link rel="stylesheet" href="static/font-awesome-4.7.0/css/font-awesome.min.css">
   <link rel="icon" type="image/png" href="images/tab_logo.png">
   <script type="text/javascript" charset="utf-8" src="javascripts/jquery.min.js"></script>
   <script type="text/javascript" charset="utf-8" src="javascripts/client.js"></script>
@@ -211,7 +212,7 @@
                 <div class="row">
                 <div class="form-group col-md-2">
                     <label class="control-label">For the Month: </label>
-                    <input class="form-control input-sm month" id="month" name="month" type="month" >
+                    <input class="form-control input-sm month" id="month" name="month" type="month" onchange="month_changed()">
                 </div>
                 <div class="form-group col-md-3">
                     <label class="control-label">Issue Date: </label>
@@ -266,7 +267,7 @@
                                             
                        <table id="fees_table" class="table table-striped table-bordered table-list">
                         <thead>
-                          <tr>
+                          <tr style="font-size: 11px">
                             <th>Gr #</th>
                             <th>Name</th>
                             <th>Father Name</th>
@@ -281,14 +282,14 @@
                             <th>Transport Arrears</th>
                             <th>Current Penalty</th>
                             <th>Total</th>
-                            <th>For the Month</th>
+<!--                             <th>For the Month</th>
                             <th>Issue Date</th>
-                            <th>Due Date</th>
+                            <th>Due Date</th> -->
                             <th>Receive Date</th>
                             <th>Update Record</th>
-                            <th>Print Admission Challan</th>
-                            <th>Print Monthly Challan</th>
-                            <th>Print Transport Challan</th>
+                            <th>Print Adm Challan</th>
+                            <th>Print Month Challan</th>
+                            <th>Print Tran Challan</th>
                           </tr> 
                           <tr>
                             <td>  </td>
@@ -305,14 +306,14 @@
                             <td> </td>
                             <td> </td>
                             <td> </td>
+<!--                             <td> </td>
                             <td> </td>
+                            <td> </td> -->
                             <td> </td>
-                            <td> </td>
-                            <td> </td>
-                            <td> <span id = "updateAllRecord" title="Update All record" class="btn btn-link" style="cursor:pointer" onclick="updateAllFees(jQuery(this).parent().parent())">Update All</span> </td>
-                            <td> <span id = "printAllAdmission" title="Print all record below" class="btn btn-link" style="cursor:pointer" onclick="batchPrintAdmTraChallan('admission')">Print All</span> </td>
-                            <td> <span id = "printMonthly" title="Print all record below" class="btn btn-link" style="cursor:pointer" onclick="batchPrintChallan()">Print All</span> </td>
-                            <td> <span id = "printAllAdmission" title="Print all record below" class="btn btn-link" style="cursor:pointer" onclick="batchPrintAdmTraChallan('transport')">Print All</span> </td>
+                            <td> <i id = "updateAllRecord" title="Update All record" class="fa fa-floppy-o" style="cursor:pointer" onclick="updateAllFees(jQuery(this).parent().parent())"></i> </td>
+                            <td> <i id = "printAllAdmission" title="Print all record below" class="fa fa-print" style="cursor:pointer" onclick="batchPrintAdmTraChallan('admission')"></i> </td>
+                            <td> <i id = "printMonthly" title="Print all record below" class="fa fa-print" style="cursor:pointer" onclick="batchPrintChallan()"></i> </td>
+                            <td> <i id = "printAllAdmission" title="Print all record below" class="fa fa-print" style="cursor:pointer" onclick="batchPrintAdmTraChallan('transport')"></i> </td>
                           </tr>
                         </thead>
                         <tbody id="fees_table_body">
