--- a/views/add_class_form.html
+++ b/views/add_class_form.html
@@ -54,6 +54,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
+        <img src="static/img/logo-w.jpg" style="float: left; height: 55px;">
         <a class="navbar-brand" href="#">U N ACADEMY<br/>
           <small>School Management System</small>
         </a>
@@ -75,8 +76,11 @@
 				<fieldset>
 					<legend>Class Form</legend>
 					<div>
+					  <span>Class Code: </span>
+					  <input id="code" name="code" type="number" >
+					</br>
 					  <span>Class Name: </span>
-					  <input id="name" name="name" type="text" >
+					  <input id="name" name="name" type="text" >					  
 					  <br>
 					</div>
 					<div class="form-group">
