--- a/views/add_std.html
+++ b/views/add_std.html
@@ -174,6 +174,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
+        <img src="static/img/logo-w.jpg" style="float: left; height: 55px;">
         <a class="navbar-brand" href="#">U N ACADEMY<br/>
           <small>School Management System</small>
         </a>
@@ -195,7 +196,7 @@
               <div class="col-md-8 ">
                 <div class="pull-right" style="margin: 10px 0;">
                   <button class="btn btn-success" onclick="add_std()">Add Student</button>
-                  <button class="btn btn-success" onclick="add_class()">Add Class</button>
+                  <button class="btn btn-warning" onclick="class_mng()">Class Management</button>
                   <button class="btn btn-warning" onclick="fees_mng()">Fees Management</button>
                   <button class="btn btn-warning" onclick="fees_his()">Fees History</button>
                   <button class="btn btn-warning" onclick="print_std()">Print</button>
