--- a/views/class_mng.html
+++ b/views/class_mng.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -14,10 +13,10 @@
   <script type="text/javascript" charset="utf-8" src="javascripts/notify.min.js"></script> 
   <script type="text/javascript" charset="utf-8" src="javascripts/jquery.dataTables.min.js"></script>
   <script type="text/javascript" charset="utf-8" src="javascripts/core.js"></script>
-  <script src="https://unpkg.com/jspdf@latest/dist/jspdf.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/print-js@1.0.54/dist/print.min.js"></script>
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/print-js@1.0.54/dist/print.css">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" media='screen,print'>
+
 
   <style>.bootstrap-iso .formden_header h2, .bootstrap-iso .formden_header p, .bootstrap-iso form{font-family: Arial, Helvetica, sans-serif; color: black}.bootstrap-iso form button, .bootstrap-iso form button:hover{color: white !important;} .asteriskField{color: red;}</style>
 
@@ -159,15 +158,12 @@
     margin-right: 790px;
     margin-bottom: 100px;
   }
-  .panel-body {
-    overflow-y: hidden;
-  }
-  .search-btn{
-    margin-top: 20px;
+  #classes{
+    width: auto !important;
   }
 </style>
 </head>
-<body onload="getHistory()">
+<body onload="getClassInfo()">
 
   <nav class="navbar navbar-default">
     <div class="container">
@@ -190,68 +186,39 @@
                   <li><a href="/logout">Sign Out</a></li>
                 </ul>
 
-      </div><!--/.navbar-collapse -->
-    </div>
-  </nav>
+              </div><!--/.navbar-collapse -->
+            </div>
+          </nav>
           <div class="container">
             <div class="row">
               <div class="col-md-4">
-                <h2 style="margin: 10px 0; text-transform: uppercase;"><strong>Students</strong></h2>
+                <h2 style="margin: 10px 0; text-transform: uppercase;"><strong>Classes</strong></h2>
               </div>
               <div class="col-md-8 ">
                 <div class="pull-right" style="margin: 10px 0;">
-                  <button class="btn btn-warning" onclick="fees_mng()">Fees Management</button>
-                  <button class="btn btn-warning" onclick="print_history()">Print</button>
+                  <button class="btn btn-success" onclick="add_class()">Add Class</button>
+                  <button class="btn btn-success" onclick="add_std()">Promote all Students</button>
+                  <button class="btn btn-success" onclick="add_std()">Graduated to Alumnai</button>
                 </div>
-              </div>              
-              <br>
-              <form id = "fees_form">
-                <div id = "">
+              </div>
+
+              <form id = "class_form">
+                <div id = "update_emp">
                   <div class="col-md-12">
                     <div class="panel panel-default panel-table">
-                      <div class="panel-heading">
-                        <div class="row history-search">
-                          <div class="form-group col-md-3 ">
-                            <label class="control-label" for="card-number">Select Month</label>
-                            <input class="form-control input-sm" id="month" name="month" type="month">
-                          </div>
-
-                          <div class="form-group col-md-3 ">
-                            <label class="control-label" for="card-number">Class</label>
-                            <select name="classes" id="classes" class="form-control input-sm col-md-12">
-                              <option value="all"> All </option>
-                            </select>
-                          </div>
-
-                          <div class="form-group col-md-3 ">
-                            <button class="btn btn-sm btn-success btn-block search-btn" onclick="searchStudentHistory(); return false;" >Search</button>
-                          </div>
-                        </div>
-                      </div>
                       <div class="panel-body">
-                                            
-                       <table id="history_table" class="table table-striped table-bordered table-list">
-                        <thead>
-                          <tr>
-                            <th> Gr Number  </th>
-                            <th> Name </th>
-                            <th> Class </th>
-                            <th> Security </th>
-                            <th> Annual Charges </th>
-                            <th> Tution Fees </th>
-                            <th> Miscellaneous </th>
-                            <th> Transport Fees </th>
-                            <th> Arrears </th>
-                            <th> Current Penalty  </th>
-                            <th> Total  </th>
-                            <th> For the Month  </th>
-                            <th> Issue Date  </th>
-                            <th> Due Date  </th>
-                            <th> Receive Date  </th>
-                          </tr> 
-                        </thead>
-                        <tbody id="history_table_body">
-                        </tbody>
+                        <table id="class_table" class="table table-striped table-bordered table-list">
+                          <thead>
+                            <tr>
+                              <th> Class Code  </th>
+                              <th> Class Name </th>
+                              <th> Update Record  </th>
+                              <th> Delete Record </th>
+                            </tr> 
+                          </thead>
+                          <tbody id="class_table_body">
+                            
+                          </tbody>
                         </table>
 
                       </div>
@@ -259,7 +226,6 @@
           </div>
         </div>
       </form>
-
     </div>
   </div>
 </body>
