--- a/views/fees_page.html
+++ b/views/fees_page.html
@@ -187,6 +187,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
+        <img src="static/img/logo-w.jpg" style="float: left; height: 55px;">
         <a class="navbar-brand" href="#">U N ACADEMY<br/>
           <small>School Management System</small>
         </a>
