--- a/views/class_mng.html
+++ b/views/class_mng.html
@@ -197,8 +197,8 @@
               <div class="col-md-8 ">
                 <div class="pull-right" style="margin: 10px 0;">
                   <button class="btn btn-success" onclick="add_class()">Add Class</button>
-                  <button class="btn btn-success" onclick="add_std()">Promote all Students</button>
-                  <button class="btn btn-success" onclick="add_std()">Graduated to Alumnai</button>
+                  <button class="btn btn-success" onclick="promote_std()">Promote all Students</button>
+                  <button class="btn btn-success" onclick="std_alumnai()">Graduated to Alumnai</button>
                 </div>
               </div>
 
