--- a/views/add_std_form.html
+++ b/views/add_std_form.html
@@ -13,12 +13,12 @@
 	<script type="text/javascript" charset="utf-8" src="javascripts/notify.min.js"></script> 
 	<script type="text/javascript" charset="utf-8" src="javascripts/jquery.dataTables.min.js"></script>
 	<script type="text/javascript" charset="utf-8" src="javascripts/core.js"></script>
-	<!-- <script type="text/javascript" charset="utf-8" src="javascripts/print.min58.js"></script> -->
-	<script type="text/javascript" charset="utf-8" src="javascripts/print59.js"></script>
+	<script type="text/javascript" charset="utf-8" src="javascripts/print.min58.js"></script>
+	<!-- <script type="text/javascript" charset="utf-8" src="javascripts/print59.js"></script> -->
 	<!-- <script type="text/javascript" charset="utf-8" src="javascripts/print.min58.js"></script> -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.3/moment.min.js"></script>
 	<!-- <script src="https://cdn.jsdelivr.net/npm/print-js@1.0.63/dist/print.min.js"></script> -->
-	<!-- <script src="https://cdn.jsdelivr.net/npm/print-js@1.0.59/dist/print.min.js"></script> -->
+	<!-- <script src="https://cdn.jsdelivr.net/npm/print-js@1.0.58/dist/print.min.js"></script> -->
 	<!-- <script src="https://printjs-4de6.kxcdn.com/print.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="https://printjs-4de6.kxcdn.com/print.min.css"> -->
 </head>
