changes in fees and update

--- a/views/add_std_form.html
+++ b/views/add_std_form.html
@@ -310,7 +310,7 @@ body{
 							</div>
 							<div class="row">
 								<div class="col-sm-11">
-									<textarea id="activities" name="health" rows="4" class="form-control"></textarea>
+									<textarea id="health" name="health" rows="4" class="form-control"></textarea>
 								</div>
 							</div>
 						</div>
