--- a/views/update_std_form.html
+++ b/views/update_std_form.html
@@ -13,6 +13,7 @@
 	<script type="text/javascript" charset="utf-8" src="javascripts/notify.min.js"></script> 
 	<script type="text/javascript" charset="utf-8" src="javascripts/jquery.dataTables.min.js"></script>
 	<script type="text/javascript" charset="utf-8" src="javascripts/core.js"></script>
+	<script type="text/javascript" charset="utf-8" src="javascripts/print.min58.js"></script>	
 </head>
 <style type="text/css">
 body{
@@ -25,7 +26,6 @@ body{
 .container.form-container{
 	margin: 0 auto;
 	background: #FFF;
-	max-width: 800px;
 	border-radius: 3px;
 	box-shadow: 0 0 10px rgba(0,0,0,0.2);
 }
@@ -41,6 +41,9 @@ body{
 .navbar-nav>li>a {
 		padding-top: 25px;
 		padding-bottom: 25px;
+}
+.form-field {
+    padding-left: 10%;
 }
 </style>
 <body onload="updateStudentInfo()">
@@ -73,141 +76,263 @@ body{
 			<form id="stdForm" class="form-horizontal">
 				<!-- Form Name -->
 				<fieldset>
-					<legend>Admission Form</legend>
-					<div class="form-group">
-						<label class="col-sm-3 control-label" for="gr_num">GR No. </label>
-						<div class="col-sm-9">
-							<input type="text" id="gr_num" name="gr_num" placeholder="GR Number" class="form-control">
-						</div>
-					</div>
-					<div class="form-group">
-						<label class="col-sm-3 control-label" for="name">Full Name </label>
-						<div class="col-sm-9">
-							<input type="text" id="full_name" name="name" placeholder="Full Name" class="form-control">
-						</div>
-					</div>
-					<div class="form-group">
-						<label class="col-sm-3 control-label" for="gender">Gender</label>
-						<div class="col-sm-9">
-							<select name="gender" id="gender" class="form-control">
-								<option value="boy">Boy</option>
-								<option value="girl">Girl</option>
-							</select>
-						</div>
-					</div>
-					<div class="form-group">
-						<label class="col-sm-3 control-label" for="dob">Exact Date of Birth: </label>
-						<div class="col-sm-9">
-							<input id="dob" name="dob" type="date" class="form-control"  onchange="getAge()">
-						</div>
-					</div>
-					<div class="form-group">
-						<label class="col-sm-3 control-label" for="age">Age</label>
-						<div class="col-sm-9">
-							<input id="age" name="age" type="text" class="form-control" readonly>
-						</div>
-					</div>
-					<div class="form-group">
-						<label class="col-sm-3 control-label" for="place_of_birth">Place of Birth</label>
-						<div class="col-sm-9">
-							<input type="text" name="place_of_birth" id="pob" class="form-control">
-						</div>
-					</div>
-					<div class="form-group">
-						<label class="col-sm-3 control-label" for="nationality">Nationality</label>
-						<div class="col-sm-9">	
-							<input id="nationality" name="nationality" type="text" class="form-control">
-						</div>
-					</div>
-					<div class="form-group">
-						<label class="col-sm-3 control-label" for="religion">Religion</label>
-						<div class="col-sm-9">	
-							<input id="religion" name="religion" type="text" class="form-control">
-						</div>
-					</div>
-					<div class="form-group">
-						<label class="col-sm-3 control-label" for="class_id">Class in which Admitted</label>
-						<div class="col-sm-9">	
-							<select name="class_id" id="classes" class="form-control">
-								<option value=""></option>
-							</select>
-						</div>
-					</div>
-					<div class="form-group">
-						<label class="col-sm-3 control-label" for="f_name">Father's Name/Guardian's Name</label>
-						<div class="col-sm-9">	
-							<input id="f_name" name="f_name" type="text"  class="form-control">
-						</div>
-					</div>
-					<div class="form-group">
-						<label class="col-sm-3 control-label" for="address">Address: </label>
-						<div class="col-sm-9">	
-							<input id="address" name="address" type="text"  class="form-control">
-						</div>
-					</div>	
-					<div class="form-group">
-						<label class="col-sm-3 control-label" for="f_profession">Father's profession or occupation: </label>
-						<div class="col-sm-9">	
-							<input id="f_profession" name="f_profession" type="text"  class="form-control">
-						</div>
-					</div>			  		  
-					<div class="form-group">
-						<label class="col-sm-3 control-label" for="m_profession">Mother's profession or occupation: </label>
-						<div class="col-sm-9">	
-							<input id="m_profession" name="m_profession" type="text"  class="form-control">
-						</div>
-					</div>			  		  
-					<div class="form-group">
-						<label class="col-sm-3 control-label" for="telephone_home">Telephone(Home): </label>
-						<div class="col-sm-9">	
-							<input id="t_home" name="telephone_home" type="text"  class="form-control">
-						</div>
-					</div>			  		  
-					<div class="form-group">
-						<label class="col-sm-3 control-label" for="telephone_office">Telephone(Office): </label>
-						<div class="col-sm-9">
-							<input id="t_office" name="telephone_office" type="text" class="form-control" >
-						</div>
-					</div>			  		  
-					<div class="form-group">
-						<label class="col-sm-3 control-label" for="old_details">Brief details of any previous schooling  the child has /had: </label>
-						<div class="col-sm-9">
-							<textarea id="previous_info" name="old_details" rows="4" class="form-control"></textarea>
-						</div>
-					</div>			  		  
-					<div class="form-group">
-						<label class="col-sm-3 control-label" for="participation">Any participation Co-Curricular Activities: </label>
-						<div class="col-sm-9">
-							<textarea id="participation" name="participation" rows="4" class="form-control"></textarea>
-						</div>
-					</div>			  		  
-					<div class="form-group">
-						<label class="col-sm-3 control-label" for="awards">Any Awards / Distinction / Certificate: </label>
-						<div class="col-sm-9">
-							<textarea id="awards" name="awards" rows="4" class="form-control"></textarea>
-						</div>
-					</div>			  		  
-					<div class="form-group">
-						<label class="col-sm-3 control-label" for="health">Is there anything you would like to tell us about child's health habits, and educational Standard etc? </label>
-						<div class="col-sm-9">
-							<textarea id="health" name="health" rows="4" class="form-control"></textarea>
-						</div>
-					</div>
-					<div class="form-group">
-						<label class="col-sm-3 control-label" for="health"> His/Her brother/sister studying in U N Academy </label>
-						<div class="col-sm-9">
-							<textarea id="sibling" name="sibling" rows="4" class="form-control"></textarea>
-						</div>
-					</div>
+					
 
-					<div class="form-group">
-						<div class="col-sm-offset-3 col-sm-9">
-							<div id="add_std_button" class="">
-								<button onclick="updateSetStudent(); return false;" style="margin-bottom: 55px;" class="btn btn-primary">SUBMIT</button>
+					<div class="form-field" id="form-field">
+					
+					<div style="text-align: center;">
+						<img src="static/img/logo-w.jpg" style="float: left;width: 100px">
+						
+							<h1 style="height: 95px;display: inline-block;">Admission Form</h1>
+						
+					</div>
+					<div class="row">
+						<div class="form-group col-sm-4">
+							<div class="row">
+								<label class="col-sm-9" for="gr_num">GR No. </label>
+							</div>
+							<div class="row">
+								<div class="col-sm-11">
+									<input type="text" id="gr_num" name="gr_num" placeholder="GR Number" class="form-control">
+								</div>
 							</div>
 						</div>
+						<div class="form-group col-sm-4">
+							<div class="row">
+								<label class="col-sm-9" for="name">Student's Full Name </label>
+							</div>
+							<div class="row">
+								<div class="col-sm-11">
+									<input type="text" id="full_name" name="name" placeholder="Full Name" class="form-control">
+								</div>
+							</div>
+						</div>
+						<div class="form-group col-sm-4">
+							<div class="row">
+								<label class="col-sm-9" for="gender">Gender</label>
+							</div>
+							<div class="row">
+								<div class="col-sm-11">
+									<select name="gender" id="gender" class="form-control">
+										<option value="boy">Boy</option>
+										<option value="girl">Girl</option>
+									</select>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="form-group col-sm-4">
+							<div class="row">
+								<label class="col-sm-9" for="dob">Exact Date of Birth: </label>
+							</div>
+							<div class="row">
+								<div class="col-sm-11">
+									<input id="dob" name="dob" type="date" class="form-control"  onchange="getAge()">
+								</div>
+							</div>
+						</div>
+						<div class="form-group col-sm-4">
+							<div class="row">
+								<label class="col-sm-9" for="age">Age</label>
+							</div>
+							<div class="row">
+								<div class="col-sm-11">
+									<input id="age" name="age" type="text" class="form-control" readonly>
+								</div>
+							</div>
+						</div>
+						<div class="form-group col-sm-4">
+							<div class="row">
+								<label class="col-sm-9" for="place_of_birth">Place of Birth</label>
+							</div>
+							<div class="row">
+								<div class="col-sm-11">
+									<input type="text" name="place_of_birth" id="pob" class="form-control">
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="row">					
+						<div class="form-group col-sm-4">
+							<div class="row">
+								<label class="col-sm-9" for="nationality">Nationality</label>
+							</div>
+							<div class="row">
+								<div class="col-sm-11">	
+									<input id="nationality" name="nationality" type="text" class="form-control">
+								</div>
+							</div>
+						</div>
+						<div class="form-group col-sm-4">
+							<div class="row">
+								<label class="col-sm-9" for="religion">Religion</label>
+							</div>
+							<div class="row">
+								<div class="col-sm-11">	
+									<input id="religion" name="religion" type="text" class="form-control">
+								</div>
+							</div>
+						</div>
+						<div class="form-group col-sm-4">
+							<div class="row">
+								<label class="col-sm-9" for="class_id">Class Admitted</label>
+							</div>
+							<div class="row">
+								<div class="col-sm-11">	
+									<select name="class_id" id="classes" class="form-control">
+									
+									</select>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="form-group col-sm-4">
+							<div class="row">
+								<label class="col-sm-9" for="f_name">Father's Name</label>
+							</div>
+							<div class="row">
+								<div class="col-sm-11">	
+									<input id="f_name" name="f_name" type="text"  class="form-control">
+								</div>
+							</div>
+						</div>
+						<div class="form-group col-sm-4">
+							<div class="row">
+								<label class="col-sm-9" for="address">Address: </label>
+							</div>
+							<div class="row">
+								<div class="col-sm-11">	
+									<input id="address" name="address" type="text"  class="form-control">
+								</div>
+							</div>
+						</div>	
+						<div class="form-group col-sm-4">
+							<div class="row">
+								<label class="col-sm-9" for="f_profession">Father's profession: </label>
+							</div>
+							<div class="row">
+								<div class="col-sm-11">	
+									<input id="f_profession" name="f_profession" type="text"  class="form-control">
+								</div>
+							</div>
+						</div>			  		  
+					</div>
+					<div class="row">
+						<div class="form-group col-sm-4">
+							<div class="row">
+								<label class="col-sm-9" for="m_profession">Mother's profession: </label>
+							</div>
+							<div class="row">
+								<div class="col-sm-11">	
+									<input id="m_profession" name="m_profession" type="text"  class="form-control">
+								</div>
+							</div>
+						</div>			  		  
+						<div class="form-group col-sm-4">
+							<div class="row">
+								<label class="col-sm-9" for="telephone_home">Telephone(Home): </label>
+							</div>
+							<div class="row">
+								<div class="col-sm-11">	
+									<input id="t_home" name="telephone_home" type="text"  class="form-control">
+								</div>
+							</div>
+						</div>			  		  
+						<div class="form-group col-sm-4">
+							<div class="row">
+								<label class="col-sm-9" for="telephone_office">Telephone(Office): </label>
+							</div>
+							<div class="row">
+								<div class="col-sm-11">
+									<input id="t_office" name="telephone_office" type="text" class="form-control" >
+								</div>
+							</div>
+						</div>
+					</div>  
+					<div class="row">
+						<div class="form-group col-sm-6">
+							<div class="row">
+								<label class="col-sm-9" for="old_details">Brief details of any previous schooling  the child had: </label>
+							</div>
+							<div class="row">
+								<div class="col-sm-11">
+									<textarea id="previous_info" name="old_details" rows="4" class="form-control"></textarea>
+								</div>
+							</div>
+						</div>			  		  
+						<div class="form-group col-sm-6">
+							<div class="row">
+								<label class="col-sm-9" for="participation">Any participation Co-Curricular Activities: </label>
+							</div>
+							<div class="row">
+								<div class="col-sm-11">
+									<textarea id="participation" name="participation" rows="4" class="form-control"></textarea>
+								</div>
+							</div>
+						</div>			  	
+					</div>
+					<div class="row">
+						<div class="form-group col-sm-6">
+							<div class="row">
+								<label class="col-sm-9" for="awards">Any Awards / Distinction / Certificate: </label>
+							</div>
+							<div class="row">
+								<div class="col-sm-11">
+									<textarea id="awards" name="awards" rows="4" class="form-control"></textarea>
+								</div>
+							</div>
+						</div>			  		  
+						<div class="form-group col-sm-6">
+							<div class="row">
+								<label class="col-sm-9" for="monthly_fees"> Brother/Sister studying in U N Academy </label>
+							</div>
+							<div class="row">
+								<div class="col-sm-11">
+									<textarea id="sibling" name="sibling" rows="4" class="form-control"></textarea>
+			                    </div>
+			                </div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="form-group col-sm-6">
+							<div class="row">
+								<label class="col-sm-9" for="health">Is there anything you would like to tell us about child's health habits, and educational Standard etc? </label>
+							</div>
+							<div class="row">
+								<div class="col-sm-11">
+									<textarea id="health" name="health" rows="4" class="form-control"></textarea>
+								</div>
+							</div>
+						</div>
+
+<!-- 					<div class="form-group">
+						<label class="col-sm-3 col-sm-9" for="admission_fees">Admission Fees: </label>
+						<div class="col-sm-11">
+							<input id="admission_fees" name="admission_fees" type="number" class="form-control" >
+						</div>
+					</div>		 -->	  		  
+						<!-- <div class="form-group col-sm-6">
+							<div class="row">
+								<label class="col-sm-9" for="monthly_fees">Monthly Fees: </label>
+							</div>
+							<div class="row">
+								<div class="col-sm-11">
+									<input id="monthly_fees" name="monthly_fees" type="number" class="form-control" >
+								</div>
+							</div>
+						</div> -->
 					</div>	
 				</div>
+				<div class="form-group">
+					<div class="btn" style="width: 100%">
+						<div id="add_std_button" class="">
+							<button onclick="updateSetStudent(); return false;" style="width: 17%; padding: 12px;" class="btn btn-primary">Submit</button>							
+							<button onclick="std_info_print(); return false;" style="width: 17%; padding: 12px;" class="btn btn-primary">Print</button>							
+						</div>
+					</div>
+				</div>				
 			</fieldset>
 		</form> 
 	</div>
