--- a/views/login.html
+++ b/views/login.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <img src="static/img/logo_png.png" style="float: left; height: 110px;">
         <title>Login School Management System</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <!-- <link rel="icon" type="image/png" href="images/tab_logo.png"> -->
@@ -9,8 +10,7 @@
 
         <style type="text/css">
             body {
-              /*background-color:#fff;*/
-              background-color:#081D3E;
+              background-color:#fff;
               -webkit-font-smoothing: antialiased;
               font: normal 14px sans-serif;
           }
