--- a/views/update_std_form.html
+++ b/views/update_std_form.html
@@ -81,7 +81,7 @@ body{
 					<div class="form-field" id="form-field">
 					
 					<div style="text-align: center;">
-						<img src="static/img/logo-w.jpg" style="float: left;width: 100px">
+						<img src="static/img/logo_png.png" style="float: left;width: 100px">
 						
 							<h1 style="height: 95px;display: inline-block;">Admission Form</h1>
 						
