--- a/views/add_class_form.html
+++ b/views/add_class_form.html
@@ -54,7 +54,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <img src="static/img/logo-w.jpg" style="float: left; height: 55px;">
+        <img src="static/img/logo_png.png" style="float: left; height: 80px;">
         <a class="navbar-brand" href="#">U N ACADEMY<br/>
           <small>School Management System</small>
         </a>
