--- a/views/add_std_form.html
+++ b/views/add_std_form.html
@@ -63,7 +63,7 @@ body{
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <img src="static/img/logo-w.jpg" style="float: left; height: 55px;">
+        <img src="static/img/logo_png.png" style="float: left; height: 80px;">
         <a class="navbar-brand" href="#">U N ACADEMY<br/>
           <small>School Management System</small>
         </a>
@@ -89,7 +89,7 @@ body{
 					<div class="form-field" id="form-field">
 					
 					<div style="text-align: center;">
-						<img src="static/img/logo-w.jpg" style="float: left;width: 100px">
+						<img src="static/img/logo_png.png" style="float: left;width: 100px">
 						
 							<h1 style="height: 95px;display: inline-block;">Admission Form</h1>
 						
